# nutrr

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
.chainlit/: config.toml
llm/agent/: agent.py
llm/agents/: agent.py
public/: style.css
