[tool.poetry]
name = "nutrr"
version = "0.1.0"
description = "AI Nutritionist"
authors = ["Rishabh Awatani <rishabh.awatani@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.11.4"
chainlit = "^1.1.402"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
